kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
  labels:
    app.kubernetes.io/instance: trilium
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: trilium
    app.kubernetes.io/service: trilium
    app.kubernetes.io/version: 0.92.4
    helm.sh/chart: trilium-1.3.0
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: trilium
    app.kubernetes.io/name: trilium
